--- a/Node/public/index.html
+++ b/Node/public/index.html
@@ -4,12 +4,29 @@
   <title>Node database tutorial</title>
 </head>
 <body>
+  <center>
+  <form class="Login">
+    <h1>Login</h1>
+    <input type="text" class="username" placeholder="username">
+    <input type="password" class="password" placeholder="password">
+    <input type="submit" value="Login">
+  </form>
   <form class="CreateUser">
     <h1>Create a new user</h1>
     <input type="text" class="username" placeholder="username">
     <input type="password" class="password" placeholder="password">
     <input type="submit" value="Create user">
   </form>
+  
+  <form class="GetGameImage">
+    <h1>Create a new user</h1>
+    <input type="number" class="gameid" placeholder="Game ID">
+    <input type="submit" value="Get Game">
+  </form>
+  
+  <img src="https://media.giphy.com/media/3o6Zt7aSSZLX6U5WtW/source.gif">
+  </center>
+
   <script src="/app.js"></script>
 </body>
 </html>
