Node JS Website, Game Player Counter, Table to Keep track of amount of queries

--- a/Node/public/index.html
+++ b/Node/public/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <center>
+  <!--
   <form class="Login">
     <h1>Login</h1>
     <input type="text" class="username" placeholder="username">
@@ -19,12 +20,23 @@
   </form>
   
   <form class="GetGameImage">
-    <h1>Create a new user</h1>
-    <input type="number" class="gameid" placeholder="Game ID">
+    <h1>Get A Game Image</h1>
+    <input type="text" class="gameid" placeholder="Game ID">
     <input type="submit" value="Get Game">
   </form>
   
-  <img src="https://media.giphy.com/media/3o6Zt7aSSZLX6U5WtW/source.gif">
+  <img src="http://cdn.akamai.steamstatic.com/steam/apps/10/header.jpg?t=1512411844" id="test">
+  -->
+  <form class="GetPlayersGames">
+    <h1>GetPlayers Games</h1>
+    <input type="text" class="steamid" placeholder="Steam ID">
+    <input type="submit" value="Get Games">
+  </form>
+  
+
+    <div id="imageContainer"></div>
+
+  
   </center>
 
   <script src="/app.js"></script>
