--- a/Node/public/index.html
+++ b/Node/public/index.html
@@ -27,6 +27,99 @@
   
   <img src="http://cdn.akamai.steamstatic.com/steam/apps/10/header.jpg?t=1512411844" id="test">
   -->
+  
+  
+<script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
+<script src="datamaps.world.js"></script>
+<div id="container" style="position: relative; width: 1000px; height: 600px;"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" ></script>
+<script>
+
+
+$(document).ready( function() {
+  $.ajax({
+  type: 'GET',
+  url: '/getPlayerCount',
+  data: 'id=578080',
+  success: function(result) {
+	a = JSON.parse(result);
+	temp(a);
+  },
+  });
+});
+
+
+function temp(result)
+{
+	
+
+	var series = [];
+	
+	for(var k in result[0]) {
+	   var a = [result[0][k]["3LetterCode"], result[0][k]["count"]];
+	   series.push(a);
+	}
+	
+	
+	
+    // Datamaps expect data in format:
+    // { "USA": { "fillColor": "#42a844", numberOfWhatever: 75},
+    //   "FRA": { "fillColor": "#8dc386", numberOfWhatever: 43 } }
+    var dataset = {};
+    // We need to colorize every country based on "numberOfWhatever"
+    // colors should be uniq for every value.
+    // For this purpose we create palette(using min/max series-value)
+    var onlyValues = series.map(function(obj){ return obj[1]; });
+    var minValue = Math.min.apply(null, onlyValues),
+            maxValue = Math.max.apply(null, onlyValues);
+    // create color palette function
+    // color can be whatever you wish
+    var paletteScale = d3.scale.linear()
+            .domain([minValue,maxValue])
+            .range(["#EFEFFF","#02386F"]); // blue color
+    // fill dataset in appropriate format
+    series.forEach(function(item){ //
+        // item example value ["USA", 70]
+        var iso = item[0],
+                value = item[1];
+        dataset[iso] = { numberOfThings: value, fillColor: paletteScale(value) };
+    });
+    // render map
+    var map = new Datamap({
+        element: document.getElementById('container'),
+        projection: 'mercator', // big world map
+        // countries don't listed in dataset will be painted with this color
+        fills: { defaultFill: '#F5F5F5' },
+        data: dataset,
+        geographyConfig: {
+            borderColor: '#DEDEDE',
+            highlightBorderWidth: 2,
+            // don't change color on mouse hover
+            highlightFillColor: function(geo) {
+                return geo['fillColor'] || '#F5F5F5';
+            },
+            // only change border
+            highlightBorderColor: '#B7B7B7',
+            // show desired information in tooltip
+            popupTemplate: function(geo, data) {
+                // don't show tooltip if country don't present in dataset
+                if (!data) { return ; }
+                // tooltip content
+                return ['<div class="hoverinfo">',
+                    '<strong>', geo.properties.name, '</strong>',
+                    '<br>Count: <strong>', data.numberOfThings, '</strong>',
+                    '</div>'].join('');
+            }
+        }
+    });	
+};
+
+    // example data from server
+    
+</script>
+  
   <form class="GetPlayersGames">
     <h1>GetPlayers Games</h1>
     <input type="text" class="steamid" placeholder="Steam ID">
@@ -34,7 +127,7 @@
   </form>
   
 
-    <div id="imageContainer"></div>
+  <div id="imageContainer"></div>
 
   
   </center>
