Added function to evaluating percentage and relative percentage of the player amount in a country

--- a/Node/public/index.html
+++ b/Node/public/index.html
@@ -136,8 +136,8 @@ function temp(result)
 	var series = [];
 	
 	for(var k in result[0]) {
-	   var a = [result[0][k]["3LetterCode"], result[0][k]["Count"]];
-	   //console.log(a);
+	   var a = [result[0][k]["3LetterCode"], result[0][k]["Value"]];
+	   console.log(a);
 	   series.push(a);
 	}
 
